crates/aven-check/tests/fixtures/check/valid/or-pattern-literals.av
value = "r" ?>
  "r" | "w" => 1
  _ => 0
