crates/aven-check/tests/fixtures/check/invalid/closed-variant-superset-into-narrow-annotation.av
direction = n ?>
  0 => @Zero
  _ => @Pos
value : @{@Zero} = direction
